--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,8 @@
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  width: 1080px;
+  margin: 0 auto;
 }
 
 .main {
